navbar bug fix
- fixed bug where navbar display was messed up when resize
- happened when mobile nav menu was resized to 1024px wide while open

--- a/styles/style.css
+++ b/styles/style.css
@@ -86,11 +86,21 @@ header{
     z-index: 3;
     padding-top: 5px;
 }
+/* fixed navbar */
+.header.fixed{
+    position: fixed;
+    background-color: rgba(255, 255, 255, 0.98);
+    box-shadow: 0 2px 2px #efefef;
+}
 .brand-name{
     color: #fff;
     line-height: 60px;
     font-size: 1.75rem;
     text-decoration: none;
+}
+/* navbar text color change */
+.fixed .brand-name, .fixed nav ul li a{
+    color: #000;
 }
 /* hamburger menu lines */
 .hamburger{
@@ -129,18 +139,22 @@ header{
 .hamburger > div:after{
     transform: translateY(8px);
 }
-/* hamburger menu color change */
-.hamburger > .black{
-    background-color: #000;
+/* hamburger menu black */
+.fixed .hamburger > div{
+    background: #000;
 }
-.hamburger > .white{
-    background-color: #fff;
+/* hamburger fixed position */
+.hamburger.stuck{
+    position: fixed;
+}
+/* hamburger menu white */
+.js-hamburger.white{
+    background: #fff !important;
 }
 /* hamburger menu animation */
 .rotate-ham-menu{
     transform: rotate(-135deg);
 }
-
 .rotate-ham-menu.hamburger > div:before,
 .rotate-ham-menu.hamburger > div:after{
     transform: rotate(-90deg);
@@ -157,22 +171,10 @@ nav{
     opacity: 0;
     position: fixed;
 }
-/* navigation animation */
-nav.active, nav ul li.active{
-    opacity:1;
-}
-.active{
-    display: flex;
-    justify-content: center;
-}
-/* sticky navigation */
-.fixed{
-    position: fixed;
-    background-color: rgba(255, 255, 255, 0.98);
-    box-shadow: 0 2px 2px #efefef;
-}
-.fixed .brand-name{
-    color: #000;
+/* navigation show */
+nav.active{
+    display: block;
+    opacity: 1;
 }
 /* links */
 nav ul{
@@ -203,6 +205,10 @@ nav ul li a:visited{
 nav ul li a:hover,
 nav ul li a:active{
     border-bottom: 2px solid #F5B700;
+}
+/* links white */
+nav.white ul li a{
+    color: #fff;
 }
 /* links animation */
 @-webkit-keyframes fadeInDown {
